Add relative paths

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font awesome icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
 
@@ -14,7 +14,7 @@
     <header>
       <nav class = "navbar">
         <div class = "container">
-          <a href = "index.html" class = "navbar-brand"><img src="images/logoweb.svg" alt=""></a>
+          <a href = "./index.html" class = "navbar-brand"><img src="./images/logoweb.svg" alt=""></a>
           <div class = "navbar-nav">
             <a href = "#aboutus">About Us</a>
             <a href = "">Submit Your Story</a>
@@ -39,7 +39,7 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/strawbe.png" alt = "">
+              <img src = "./images/strawbe.png" alt = "">
             </div>
           </div>
           <!-- end of item -->
@@ -74,7 +74,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/news1.png" alt = "">
+              <img src = "./images/news1.png" alt = "">
             </div>
             <div class = "blog-text">
               <span>September 27, 2024</span>
@@ -91,7 +91,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/meadows-01.png" alt = "">
+              <img src = "./images/meadows-01.png" alt = "">
             </div>
             <div class = "blog-text">
               <span>September 27, 2024</span>
@@ -109,7 +109,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/gender-01.png" alt = "">
+              <img src = "./images/gender-01.png" alt = "">
             </div>
             <div class = "blog-text">
               <span>September 27, 2024</span>
@@ -126,7 +126,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/adhd-01.png" alt = "">
+              <img src = "./images/adhd-01.png" alt = "">
             </div>
             <div class = "blog-text">
               <span>September 27, 2024</span>
@@ -140,7 +140,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/suflowers-01.png" alt = "">
+              <img src = "./images/suflowers-01.png" alt = "">
               </div>
             <div class = "blog-text">
               <span>September 27, 2024</span>
@@ -154,7 +154,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/tea-01.png" alt = "">
+              <img src = "./images/tea-01.png" alt = "">
             </div>
             <div class = "blog-text">
               <span>September 27, 2024</span>
@@ -168,7 +168,7 @@
            <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/pink.png" alt = "">
+              <img src = "./images/pink.png" alt = "">
             </div>
             <div class = "blog-text">
               <span>September 27, 2024</span>
@@ -182,7 +182,7 @@
            <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/news2-01.png" alt = "">
+              <img src = "./images/news2-01.png" alt = "">
             </div>
             <div class = "blog-text">
               <span>September 27, 2024</span>
@@ -203,7 +203,7 @@
       <div class = "container">
         <div class = "about-content">
           <div>
-            <img src = "images/aboutus.png" alt = "">
+            <img src = "./images/aboutus.png" alt = "">
           </div>
           <div class = "about-text">
             <div class = "title">
