update incorrect name

--- a/code/index.html
+++ b/code/index.html
@@ -210,7 +210,7 @@
               <h2>About us</h2>
               <p>#dailydopamine</p>
             </div>
-            <p>Welcome to Daily Dopamine, where our mission is to 
+            <p>Welcome to Only good news, where our mission is to 
               spread positivity and celebrate the good news in the
                world. Our goal is to foster an optimistic outlook 
                by sharing uplifting stories and inspiring moments 
