added the HTML structure and CSS using grid and flex-box

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Weaving Magazine</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+
+<body>
+  <header>
+    <div class="header">
+      <img class="logo" src="assets/logo.jpg">
+      <h1 class="header-headline">The Weaving Magazine</h1>
+      <div class="navigation">
+        <div class="hamburger-layer"></div>
+        <div class="hamburger-layer"></div>
+        <div class="hamburger-layer"></div>
+      </div>
+      <nav>
+        <ul>
+          <a class="a-header" href="https://www.google.com">health</a>
+          <a class="a-header" href="https://www.google.com">community</a>
+          <a class="a-header" href="https://www.google.com">pattern</a>
+          <a class="a-header" href="https://www.google.com">shop</a>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div class="big-news">
+      <img class="big-news-img" src="assets/fabric-big-news.jpg">
+      <div class="big-news-text">
+        <h1>Weaving Is Good for Your Health:</h1>
+        <h2>The Therapeutic Benefits of a Timeless Craft</h2>
+        <p>In a fast-paced world where digital distractions and stressors are ever-present, many are turning to
+          traditional crafts as a means of finding peace and mindfulness. Weaving, an ancient art form that involves
+          interlacing threads to create fabric, has emerged as not just a creative outlet but a therapeutic practice
+          with numerous health benefits.</p>
+      </div>
+    </div>
+    <a class="card-link" href="https://google.com">
+      <div class="card">
+        <img class="card-img" src="assets/img-weaving-tec.jpg">
+        <div class="card-text">
+          <h3>Old and New Weaving Techniques: A Journey Through Time</h3>
+          <p>Weaving, one of humanity's oldest crafts, has evolved remarkably over millennia. From the earliest
+            handwoven
+            fabrics to today’s high-tech textiles, weaving techniques have continuously adapted, blending tradition with
+            innovation.</p>
+        </div>
+      </div>
+    </a>
+
+    <a class="card-link" href="https://google.com">
+      <div class="card">
+        <img class="card-img" src="assets/art-weaving.jpg">
+        <div class="card-text">
+          <h3>The Art of Weaving: Exploring the World’s Most Famous Web Patterns</h3>
+          <p>In a small workshop nestled in the heart of Kyoto, the rhythmic clatter of looms echoes through the space.
+            The air is filled with the scent of raw cotton, silk, and wool, and the floor is littered with spools of
+            colorful thread. Here, skilled artisans practice a craft that has been passed down through generations: the
+            art of weaving. The patterns they create, known as web patterns, are not just functional but also hold
+            cultural significance and aesthetic value.</p>
+        </div>
+      </div>
+    </a>
+    <a class="card-link" href="https://google.com">
+      <div class="card">
+        <img class="card-img" src="assets/Guatemala_weaving.jpg">
+        <div class="card-text">
+          <h3>Threads of Tradition: The Close-Knit World of Weavers</h3>
+          <p>In a remote village tucked away in the mountains of Guatemala, the hum of looms resonates through the
+            narrow streets. Women dressed in colorful traditional attire sit together under the shade of an old oak
+            tree, their hands moving in a practiced rhythm as they weave intricate patterns into vibrant textiles. This
+            is the heart of the weaver’s community—a place where art, culture, and community are interwoven as tightly
+            as the threads they spin.</p>
+        </div>
+      </div>
+    </a>
+    <a class="card-link" href="https://google.com">
+      <div class="card">
+        <img class="card-img" src="assets/spider-web.jpg">
+        <div class="card-text">
+          <h3>Weaving Nature’s Masterpiece: The Spider and the Weaver</h3>
+          <p>In the early morning light, a spider’s web glistens with dew, each droplet catching the sun’s rays like
+            tiny diamonds. The web, delicate yet strong, is a marvel of engineering—an intricate network of silk threads
+            spun with precision and purpose. A few miles away, in a small village workshop, a weaver sits at her loom,
+            her hands moving deftly as she interlaces threads to create a vibrant textile. Though separated by species
+            and purpose, the spider and the weaver share a deep, unspoken connection: the ancient and universal art of
+            weaving.</p>
+        </div>
+      </div>
+
+
+
 </html>
