added descriptions of images for screen reader

--- a/code/index.html
+++ b/code/index.html
@@ -32,7 +32,7 @@
 
   <main>
     <div class="big-news">
-      <img class="big-news-img" src="assets/fabric-big-news.jpg">
+      <img class="big-news-img" src="assets/fabric-big-news.jpg" alt="colorful weaved fabrics">
       <div class="big-news-text">
         <h1>Weaving Is Good for Your Health:</h1>
         <h2>The Therapeutic Benefits of a Timeless Craft</h2>
@@ -44,7 +44,7 @@
     </div>
     <a class="card-link" href="https://google.com">
       <div class="card">
-        <img class="card-img" src="assets/img-weaving-tec.jpg">
+        <img class="card-img" src="assets/img-weaving-tec.jpg" alt="hands of person weaving with a weaving frame">
         <div class="card-text">
           <h3>Old and New Weaving Techniques: A Journey Through Time</h3>
           <p>Weaving, one of humanity's oldest crafts, has evolved remarkably over millennia. From the earliest
@@ -57,7 +57,7 @@
 
     <a class="card-link" href="https://google.com">
       <div class="card">
-        <img class="card-img" src="assets/art-weaving.jpg">
+        <img class="card-img" src="assets/art-weaving.jpg" alt="hands of a person weaving a blue and white pattern">
         <div class="card-text">
           <h3>The Art of Weaving: Exploring the World’s Most Famous Web Patterns</h3>
           <p>In a small workshop nestled in the heart of Kyoto, the rhythmic clatter of looms echoes through the space.
@@ -70,7 +70,8 @@
     </a>
     <a class="card-link" href="https://google.com">
       <div class="card">
-        <img class="card-img" src="assets/Guatemala_weaving.jpg">
+        <img class="card-img" src="assets/Guatemala_weaving.jpg"
+          alt="potrait of an old sitting woman wearing a colorful weaved dress and a face-mask">
         <div class="card-text">
           <h3>Threads of Tradition: The Close-Knit World of Weavers</h3>
           <p>In a remote village tucked away in the mountains of Guatemala, the hum of looms resonates through the
@@ -83,7 +84,7 @@
     </a>
     <a class="card-link" href="https://google.com">
       <div class="card">
-        <img class="card-img" src="assets/spider-web.jpg">
+        <img class="card-img" src="assets/spider-web.jpg" alt="spider-web">
         <div class="card-text">
           <h3>Weaving Nature’s Masterpiece: The Spider and the Weaver</h3>
           <p>In the early morning light, a spider’s web glistens with dew, each droplet catching the sun’s rays like
