added a hamburger button and played around with some media query

--- a/code/index.html
+++ b/code/index.html
@@ -12,6 +12,11 @@
         <img src="./assets/IMG_patrol.jpg" alt="picture of rain and mountains" class="head-img">
   </div>
       <div class="nav-bar">
+        <div class="hamburger">
+          <div class="hamburger-layer"></div>
+          <div class="hamburger-layer"></div>
+          <div class="hamburger-layer"></div>
+        </div>
         <nav>
           <a href="#">NEWS</a>
           <a href="#">WEATHER</a>
@@ -21,8 +26,6 @@
           <a href="#">COMMUNITY</a>
           <script> document.write(new Date().toLocaleDateString());</script>
         </nav>
-       
-      
       </div>
     </header>
 
