update articles to fit guidelines for responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -19,6 +19,7 @@
       <div class="hamburger-layer"></div>
     </div>
 
+
     <div class="logo"><img src="./images/guitar-vibes.jpg" alt="The Guitar Vibes Magazine logo">
     </div>
     <nav class="navbar">
@@ -52,52 +53,107 @@
       </div>
     </section>
 
+    <h2>NEWS</h2>
+
     <section class="other-news">
       <a href="https://www.guitarworld.com/features/brian-may-guitar-world-2024-queen-guitarist-talks-gibson-freddie-mercury-and-tone"
-        target="_blank">
-        <img class="other-image" src="./images/brianmay.jpg" alt="Brian May performing">
+        class="article-link">
+        <div class="article">
+          <img src="./images/brianmay.jpg" alt="Brian May performing" class="small-image">
+          <div class="small-text">
+            <h3>Brian May on His Songwriting Relationship with Freddie Mercury</h3>
+            <p class="author">by Andrew Daly</p>
+            <p class="subheading">The Queen guitar legend shares memories and spills secrets in this epic interview,
+              dishing on what form his Gibson-made guitar might take - and the unlikely tale behind his new
+              collaboration with Steve Cropper and Billy Gibbons</p>
+          </div>
+        </div>
       </a>
-      <div class="other-text">
-        <a href="https://www.guitarworld.com/features/brian-may-guitar-world-2024-queen-guitarist-talks-gibson-freddie-mercury-and-tone"
-          target="_blank">
-          <h4>Brian May on His Songwriting Relationship with Freddie Mercury</h4>
-        </a>
-        <p>by Andrew Daly</p>
-      </div>
-
-      <a href="https://www.guitarplayer.com/lessons/teja-gerken-air-guitar" target="_blank">
-        <img class="other-image" src="./images/teja-gerken.jpg" alt="Teja Gerken with classical guitar">
+      <a href="https://www.msn.com/en-us/autos/enthusiasts/the-gibson-theodore-becomes-the-latest-model-to-join-leo-scala-s-high-end-master-artisan-collection/ar-AA1p8FcH?ocid=BingNewsVerp"
+        class="article-link">
+        <div class="article">
+          <img src="./images/gibson-guitars.jpg" alt="Gibson guitars" class="small-image">
+          <div class="small-text">
+            <h3>The Gibson Theodore Becomes the Latest Model to Join Leo Scala's High-End Master Artisan Collection</h3>
+            <p class="author">by Phil Weller</p>
+            <p class="subheading">"He's highly respectful of Gibson's history; this isn't just a show guitar that is
+              designed to sit in a display case"</p>
+          </div>
+        </div>
       </a>
-      <div class="other-text">
-        <a href="https://www.guitarplayer.com/lessons/teja-gerken-air-guitar" target="_blank">
-          <h4>Why Acoustic Fingerstyle Virtuoso Teja Gerken Recommends Playing Air Guitar</h4>
-        </a>
-        <p>by Jimmy Leslie</p>
-      </div>
-
-      <a href="https://www.guitarworld.com/news/kenny-petrie-britains-got-talent-audition" target="_blank">
-        <img class="other-image" src="./images/grandpa-shredder.jpg" alt="Grandpa performing">
+      <a href="https://www.guitarplayer.com/lessons/teja-gerken-air-guitar" class="article-link">
+        <div class="article">
+          <img src="./images/teja-gerken.jpg" alt="Teja Gerken with guitar" class="small-image">
+          <div class="small-text">
+            <h3>Why Acoustic Fingerstyle Virtuoso Teja Gerken Recommends Playing Air Guitar</h3>
+            <p class="author">by Jimmy Leslie</p>
+            <p class="subheading">How it helps to have tunes come quicker once you've got the guitar ready and the side
+              benefit from a health perpsective</p>
+          </div>
+        </div>
       </a>
-      <div class="other-text">
-        <a href="https://www.guitarworld.com/news/kenny-petrie-britains-got-talent-audition" target="_blank">
-          <h4>64-year-old Grandpa Shredder Goes Viral (Again) After His Van Halen-influenced Britain's Got Talent
-            Audition Resurfaces</h4>
-        </a>
-        <p>by Phil Weller</p>
-      </div>
-
-      <a href="https://www.guitarworld.com/news/carmen-vandenberg-on-jeff-beck-guitar-tone-test" target="_blank">
-        <img class="other-image" src="./images/carmen-vandenberg.jpg" alt="Carmen Vandenbreg performing">
+      <a href="https://www.guitarworld.com/news/kenny-petrie-britains-got-talent-audition" target="_blank"
+        class="article-link">
+        <div class="article">
+          <img src="./images/grandpa-shredder.jpg" alt="64-year-old shredder performing" class="small-image">
+          <div class="small-text">
+            <h3>64-year-old Grandpa Shredder Goes Viral (Again) After His Van Halen-influenced Britain's Got Talent
+              Audition Resurfaces</h3>
+            <p class="author">by Phil Weller</p>
+            <p class="subheading">How the unassuming guitarist won over the audience with his two hand-tapping-filled
+              performance</p>
+          </div>
+        </div>
       </a>
-      <div class="other-text">
-        <a href="https://www.guitarworld.com/news/carmen-vandenberg-on-jeff-beck-guitar-tone-test" target="_blank">
-          <h4>Carmen Vandenburg Recalls Jeff Beck's Ultimate Tone Test</h4>
-        </a>
-        <p>by Janelle Borg</p>
-      </div>
+      <a href="https://www.guitarworld.com/news/carmen-vandenberg-on-jeff-beck-guitar-tone-test" class="article-link">
+        <div class="article">
+          <img src="./images/carmen-vandenberg.jpg" alt="Carmen Vanedenberg performing" class="small-image">
+          <div class="small-text">
+            <h3>Carmen Vandenburg Recalls Jeff Beck's Ultimate Tone Test</h3>
+            <p class="author">by Janelle Borg</p>
+            <p class="subheading">Vandenberg discusses the invaluable lesson she learned from Beck about achieving your
+              tone no matter what equipment you have at hand</p>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.guitarplayer.com/gear/best-electric-guitars" class="article-link">
+        <div class="article">
+          <img src="./images/electric-guitar.jpg" alt="An electric guitar" class="small-image">
+          <div class="small-text">
+            <h3>Best Electric Guitars 2024: Fine Electrics For Beginner To Pro Players</h3>
+            <p class="author">by Daryl Robertson</p>
+            <p class="subheading">We run down the best electric guitars for all budgets currently available from the
+              likes of Gibson, Fender, PRS, Reverend, Music Man, Jackson and more</p>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.guitarplayer.com/news/blackstar-debut-30e-combo-amp" class="article-link">
+        <div class="article">
+          <img src="./images/blackstar-amp.jpg" alt="Blackstar amp" class="small-image">
+          <div class="small-text">
+            <h3>Blackstar Unveils the Debut 30E: a 30-Watt Analog Amp with a Built-in Tape Echo and Custom 1x10" Speaker
+            </h3>
+            <p class="author">by Phil Weller</p>
+            <p class="subheading">The British firm's acclaimed Debut series continues to grow four years on, with the
+              features of the 10E and 15E given a mightier output</p>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.guitarplayer.com/lessons/ella-feingold-funk-guitar" class="article-link">
+        <div class="article">
+          <img src="./images/ella-feingold.jpg" alt="Ella Feingold with guitar" class="small-image">
+          <div class="small-text">
+            <h3>Ella Feingold Weaves Magic with her Funky Playing</h3>
+            <p class="author">by Jeff Jacobson</p>
+            <p class="subheading">Prince told her she was "too funky" and Bruno Mars sent her one of his signature
+              Strats. This guided tour of her approach is a funk guitar one-stop shop and this lesson in her style will
+              sharpen up your rhythm work in no time</p>
+          </div>
+        </div>
+      </a>
 
-      <!-- The other news  -->
     </section>
+
   </main>
 
   <footer class="footer">
@@ -110,7 +166,7 @@
       <a href="https://www.tiktok.com/explore" class="social-icon"><img src="./images/tiktok.png" alt="TikTok"></a>
     </div>
     <div class="footer-text">
-      <p>&copy; 2024 Guitar Vibes. All Rights Reserved.</p>
+      <p>&copy; 2024 Guitar Vibes, Inc. All Rights Reserved.</p>
     </div>
   </footer>
 
