Updated the images paths

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 
 <body>
   <header>
-    <!--<img
-      src="/Users/johanna.eriksson@xxx/Desktop/project-news-site/project-news-site/Assets/Farmers_news_transparent.png"
-      alt="Logo" style="width: 200px; height: auto;">
     <h1>Welcome to Farmer's news</h1>-->
-    <img src="assets/Farmers_news_transparent.png" alt="Logo" style="width: 200px; height: auto;">
+    <img src="Assets/Farmers_news_transparent.png" alt="Logo" style="width: 200px; height: auto;">
   </header>
   <!-- Hamburger menu for mobile...-->
   <div class="hamburger-menu">
@@ -43,7 +40,7 @@
   <main>
     <section class="big-news">
       <!-- The big news content -->
-      <img src="assets/FarmerJoey.webp" alt="Award-Winning" />
+      <img src="Assets/FarmerJoey.webp" alt="Award-Winning" />
       <div class="big-news-content">
         <h1>Award-Winning Farmer</h1>
         <p>A local Hero Honored for Agricultural Excellence. In a special ceremony, an elderly female farmer was
@@ -57,7 +54,7 @@
     <section class="minor-news-container">
       <!-- Minor news items -->
       <div class="minor-news">
-        <img src="assets/PIG.webp" alt="Escape Artist: Pig" />
+        <img src="Assets/PIG.webp" alt="Escape Artist: Pig" />
         <div class="minor-news-content">
           <h2>Escape Artist: Pig Breaks Free from Farm, Causes Havoc</h2>
           <p>Early this morning, a mischievous pig made a daring escape...</p>
@@ -66,7 +63,7 @@
       </div>
 
       <div class="minor-news">
-        <img src="assets/Cow moooh.webp" alt="Moo-dy Morning: Cow" />
+        <img src="Assets/Cow moooh.webp" alt="Moo-dy Morning: Cow" />
         <div class="minor-news-content">
           <h2>Moo-dy Morning: Cow's Loud Mooing Wakes Up the Neighborhood</h2>
           <p>Residents of a quiet village were in for a surprise when a cow...</p>
@@ -75,7 +72,7 @@
       </div>
 
       <div class="minor-news">
-        <img src="assets/Horsie.webp" alt="Unlikely Friends: Horse and Dog" />
+        <img src="Assets/Horsie.webp" alt="Unlikely Friends: Horse and Dog" />
         <div class="minor-news-content">
           <h2>Unlikely Friends: Horse and Dog Form Heartwarming Bond</h2>
           <p>In a heartwarming display of friendship, a horse and a small dog...</p>
@@ -84,7 +81,7 @@
       </div>
 
       <div class="minor-news">
-        <img src="assets/Tractor.webp" alt="Farm Mishap: Tractor" />
+        <img src="Assets/Tractor.webp" alt="Farm Mishap: Tractor" />
         <div class="minor-news-content">
           <h2>Farm Mishap: Tractor Takes an Unexpected Detour into Ditch</h2>
           <p>A routine day on the farm took a turn when a tractor veered off...</p>
