--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Welcome to Farmer's news</h1>-->
+    <!--<h1>Welcome to Farmer's news</h1>-->
     <img src="Assets/Farmers_news_transparent.png" alt="Logo" style="width: 200px; height: auto;">
   </header>
   <!-- Hamburger menu for mobile...-->
