finished with the grid styling for the news and articles cointainers

--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@
   </div>
       
 <section class="latest-news-container">
-  <div class="latest-news-card">
+  <div class="latest-news-card card-one">
         <img class="card-image" src="./assets/IMG_female.guides.jpg" alt="picture of a mountain" />
         <div class="latest-news-card-content">
           <h2>Janja garnbret olympic gold</h2>
@@ -44,7 +44,7 @@
           </p>
         </div>
       </div>
-  <div class="latest-news-card">
+  <div class="latest-news-card card-two">
         <img class="card-image" src="./assets/IMG_ostsidan.jpg" alt="picture of a mountain" />
         <div class="latest-news-card-content">
           <h2>Janja garnbret olympic gold</h2>
@@ -54,7 +54,7 @@
           </p>
         </div>
       </div>
-  <div class="latest-news-card">
+  <div class="latest-news-card card-three">
         <img class="card-image" src="./assets/IMG_keb.viaf.jpg" alt="picture of a mountain" />
         <div class="latest-news-card-content">
           <h2>Janja garnbret olympic gold</h2>
@@ -85,22 +85,31 @@
   <div class="article-card">
     <img class="articles-card-image" src="./assets/IMG_skoter.jpg" alt="picture of rain and mountains">
     <div class="articles-card-content">
-      <h3>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h3>
+      <h2>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h2>
+      <p> COUNTRY 2024-07-19</p>
     </div>
   </div>
-  <div class="article-card-next">
+  <div class="article-card">
     <img class="articles-card-image" src="./assets/IMG_falljokull.jpg" alt="picture of rain and mountains">
     <div class="articles-card-content">
-      <h3>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h3>
+      <h2>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h2>
+      <p> COUNTRY 2024-07-19</p>
     </div>
   </div>
   <div class="article-card">
     <img class="articles-card-image" src="./assets/IMG_happy.group.jpg" alt="picture of rain and mountains">
     <div class="articles-card-content">
-      <h3>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h3>
+      <h2>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h2>
+      <p> COUNTRY 2024-07-19</p>
     </div>
   </div>
-  
+  <div class="article-card">
+    <img class="articles-card-image" src="./assets/IMG_falljokull.jpg" alt="picture of rain and mountains">
+    <div class="articles-card-content">
+      <h2>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h2>
+      <p> COUNTRY 2024-07-19</p>
+    </div>
+  </div>
 
 </section>
 <footer>
